# tldw

./: .envrc  .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: lib.rs  main.rs  processing.rs  summarizer.rs
