[package]
name = "tldw"
version = "0.3.3"
authors = ["Fernando Meyer <fm@pobox.com>"]
edition = "2021"
default-run = "tldw"

[dependencies]
tempfile = "3.5.0"
tokio = { version = "1", features = ["full"] }
regex = "1.5"
clap = { version = "4.2.5", features = ["derive"] }
futures-util = "0.3.28"
chatgpt_rs = { version = "=1.1.3", features = ["streams"] }
log = "0.4.19"
env_logger = "0.10"
futures = "0.3"
chrono = "0.4"
