[package]
name = "tldw"
version = "0.4.0"
authors = ["Fernando Meyer <fm@pobox.com>"]
edition = "2021"
default-run = "tldw"

[dependencies]
tempfile = "3.20.0"
tokio = { version = "1", features = ["full"] }
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
async-openai = "0.29.0"
log = "0.4.27"
env_logger = "0.11"
futures = "0.3.31"
chrono = "0.4.41"
